# gantt

./: .gitignore  CMakeLists.txt  Gantt.cpp  Gantt.h  Job.h  Machine.h  README.md  clrmap.h  main.cpp
examples/: J20P10M10.txt  J5P3M3.txt  J5P3M3_cost.txt
